decreased white space in game titles on games page, added hover for icons in notebook chaptermenu, fixed position of pencil icon in supervisor pages, centered notebook choices with svgs around them, page titles in storylines now break earlier, fixed spacing on supervisor pages and removed avatar

--- a/src/assets/scss/components/01_atoms/lists.scss
+++ b/src/assets/scss/components/01_atoms/lists.scss
@@ -1,24 +1,30 @@
 .download-list-item {
-    display: table;
-    width: 100%;
+    position: relative;
     min-height: 6rem;
+    height: auto;
     padding: 15px 0;
     background-color: $white;
     box-shadow: inset 0 -1px 0 0 $base-uicolor-2;
 
     .left {
-        display: table-cell;
-        width: 50%;
-        vertical-align: middle;
+        display: initial;
+        position: relative;
+        top: 50%;
+        padding-right: 120px;
+        transform: translateY(-50%);
     }
 
     .right {
-        display: table-cell;
+        position: absolute;
+        top: 50%;
+        right: 0;
+        width: 120px;
+        display: inline-block;
         text-align: right;
-        vertical-align: middle;
+        transform: translateY(-50%);
 
         .continue {
-            display: inline;
+            display: inline-block;
             vertical-align: middle;
             color: $base-primary;
             cursor: pointer;
