--- a/src/assets/scss/components/02_molecules/pageComponents.scss
+++ b/src/assets/scss/components/02_molecules/pageComponents.scss
@@ -42,7 +42,6 @@
             }
 
             .page-title {
-                padding: 0 10px;
 
                 p {
                     @extend .h1;
